--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "src/index.tsx",
   "dependencies": {
-    "@react-native-community/netinfo": "8.2.0",
+    "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/elements": "^1.3.3",
     "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
@@ -11,36 +11,36 @@
     "@use-expo/font": "^2.0.0",
     "axios": "^0.27.2",
     "color": "^4.2.3",
-    "expo": "~45.0.0",
-    "expo-blur": "~11.1.0",
-    "expo-font": "~10.1.0",
-    "expo-linear-gradient": "~11.3.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.2",
+    "expo": "^48.0.0",
+    "expo-blur": "~12.2.2",
+    "expo-font": "~11.1.1",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "graphql": "^16.5.0",
     "immer": "^9.0.2",
     "lodash": "^4.17.21",
-    "lottie-react-native": "^5.1.3",
+    "lottie-react-native": "5.1.4",
     "moment": "^2.29.1",
-    "react": "17.0.2",
+    "react": "18.2.0",
     "react-content-loader": "^6.0.3",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
     "react-native-appearance": "~0.3.3",
     "react-native-draggable-grid": "^2.1.3",
     "react-native-error-boundary": "^1.1.9",
-    "react-native-gesture-handler": "~2.2.1",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-masked-text": "^1.13.0",
-    "react-native-pager-view": "5.4.15",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-svg": "12.3.0",
+    "react-native-pager-view": "6.1.2",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "0.17.7",
+    "react-native-web": "~0.18.11",
     "react-redux": "^7.2.4",
     "reactotron-react-native": "^5.0.0",
     "reactotron-redux": "^3.1.3",
@@ -54,11 +54,11 @@
     "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.20.0",
     "@types/color": "^3.0.1",
     "@types/lodash": "^4.14.170",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "~17.0.11",
+    "@types/react": "~18.0.27",
+    "@types/react-dom": "~18.0.10",
     "@types/react-native": "~0.67.6",
     "@types/react-redux": "^7.1.16",
     "@types/redux-persist": "^4.3.1",
@@ -66,7 +66,7 @@
     "@types/styled-components-react-native": "^5.1.3",
     "babel-plugin-styled-components": "^2.0.7",
     "patch-package": "^6.4.7",
-    "typescript": "~4.3.5",
+    "typescript": "^4.9.4",
     "typescript-styled-plugin": "^0.18.2"
   },
   "scripts": {
